[project]
name = "examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "equinox>=0.12.1",
    "jax[cuda12]<=0.5.3",
    "numpy==1.26.4",
    "optax>=0.2.4",
    "torch>=2.0.1",
    "torchvision>=0.15.2",
    "tqdm>=4.67.1",
    "wget>=3.2",
]
